--- a/sass/components/_form_field.scss
+++ b/sass/components/_form_field.scss
@@ -38,27 +38,71 @@ label {
     width: 130px;
     margin-right: 10px;
     padding-bottom: 10px;
+}
 
-    input[type="checkbox"] {
+.container_checkbox {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+
+    .checkmark {
         position: absolute;
-        margin: 0;
-        width: 14px;
-        height: 14px;
+        top: 0;
+        left: 0;
+        height: 15px;
+        width: 15px;
+        background-color: #ffffff;
+        border: 1px solid $border;
+
+        &:after {
+            content: "";
+            position: absolute;
+            display: none;
+            left: 3px;
+            top: 2px;
+            width: 5px;
+            height: 5px;
+            border: solid white;
+            border-width: 0 2px 2px 0;
+            -webkit-transform: rotate(45deg);
+            -ms-transform: rotate(45deg);
+            transform: rotate(45deg);
+        }
+    }
+
+    input {
+        position: absolute;
         opacity: 0;
-
-        +.icon {
-            display: inline-block;
-            width: 14px;
-            height: 14px;
-            border: 1px solid $border;
-        }
-
-        &:checked+.icon {
-            background-color: $primary;
-        }
+        cursor: pointer;
+        height: 0;
+        width: 0;
     }
 }
 
+.container_checkbox input:checked~.checkmark {
+    background-color: #27ae60;
+}
+
+.container_checkbox input:checked~.checkmark:after {
+    display: block;
+}
+
+// .container_checkbox .checkmark:after {
+//     left: 3px;
+//     top: 2px;
+//     width: 5px;
+//     height: 5px;
+//     border: solid white;
+//     border-width: 0 2px 2px 0;
+//     -webkit-transform: rotate(45deg);
+//     -ms-transform: rotate(45deg);
+//     transform: rotate(45deg);
+// }
 
 input[type="text"],
 [type="password"],
