--- a/sass/sections/_navbar.scss
+++ b/sass/sections/_navbar.scss
@@ -5,7 +5,6 @@
     z-index: 1;
     background-color: $bgcolor-navbar;
     height: 100vh;
-    width: auto;
     float: left;
     transition: all .3s ease-in-out;
 
@@ -38,6 +37,9 @@
 
     .team-manager {
         border-top: 1px solid $secondary;
+        display: flex;
+        justify-content: flex-start;
+        flex-direction: column;
 
         h2 {
             font-size: $small-font-size;
@@ -49,7 +51,7 @@
         }
 
         .manager {
-            position: relative;
+            display: flex;
             font-size: $small-font-size;
             color: $links;
             @include margin;
@@ -61,10 +63,9 @@
             }
 
             p {
-                display: inline-block;
-                position: absolute;
-                top: 25px;
-                left: 50px;
+                display: flex;
+                align-items: center;
+                margin-left: 10px;
             }
         }
     }
@@ -101,7 +102,13 @@
         .icon {
             display: none;
         }
+
+        .manager {
+            display: flex;
+            justify-content: center;
+        }
     }
+
 }
 
 @media (min-width:768px) and (max-width:992px) {
