--- a/sass/components/_form_field.scss
+++ b/sass/components/_form_field.scss
@@ -81,28 +81,16 @@ label {
         cursor: pointer;
         height: 0;
         width: 0;
+
+        &:checked~.checkmark {
+            background-color: #27ae60;
+        }
+
+        &:checked~.checkmark:after {
+            display: block;
+        }
     }
 }
-
-.container_checkbox input:checked~.checkmark {
-    background-color: #27ae60;
-}
-
-.container_checkbox input:checked~.checkmark:after {
-    display: block;
-}
-
-// .container_checkbox .checkmark:after {
-//     left: 3px;
-//     top: 2px;
-//     width: 5px;
-//     height: 5px;
-//     border: solid white;
-//     border-width: 0 2px 2px 0;
-//     -webkit-transform: rotate(45deg);
-//     -ms-transform: rotate(45deg);
-//     transform: rotate(45deg);
-// }
 
 input[type="text"],
 [type="password"],
