--- a/sass/sections/_navbar.scss
+++ b/sass/sections/_navbar.scss
@@ -9,12 +9,12 @@
     transition: all .3s ease-in-out;
 
     &.hide {
-        left: -140px;
+        left: -150px;
     }
 
     h3 {
         color: #ffffff;
-        font-size: $large-font-size;
+        font-size: 24px;
         font-family: 'Dancing Script', cursive;
         line-height: 30px;
         @include margin;
