--- a/sass/sections/_navbar.scss
+++ b/sass/sections/_navbar.scss
@@ -31,8 +31,8 @@
         }
     }
 
-    .icon {
-        filter: invert(60%);
+    svg {
+        fill: $brand-main-color;
     }
 
     .team-manager {
@@ -99,7 +99,7 @@
             display: none;
         }
 
-        .icon {
+        svg {
             display: none;
         }
 
