Change style for modal

--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -38,9 +38,9 @@
     display: block;
 }
 
-// .modal .btn-close {
-//     position: absolute;
-//     top: 0;
-//     right: 0;
-//     padding: 5px 10px;
-// }
+.modal .btn-close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 5px 10px;
+}
