--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,8 @@ h1 {
    * 2. Show the overflow in Edge and IE.
    */
 hr {
-  box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
   /* 1 */
   height: 0;
   /* 1 */
@@ -84,7 +85,8 @@ abbr[title] {
   /* 1 */
   text-decoration: underline;
   /* 2 */
-  text-decoration: underline dotted;
+  -webkit-text-decoration: underline dotted;
+          text-decoration: underline dotted;
   /* 2 */
 }
 
@@ -231,7 +233,8 @@ fieldset {
    *    `fieldset` elements in all browsers.
    */
 legend {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   /* 1 */
   color: inherit;
   /* 2 */
@@ -265,7 +268,8 @@ textarea {
    */
 [type="checkbox"],
 [type="radio"] {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   /* 1 */
   padding: 0;
   /* 2 */
@@ -343,7 +347,8 @@ template {
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .container {
@@ -780,14 +785,23 @@ svg:hover {
 }
 
 .table {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-around;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   margin: 30px 0px;
 }
 
 .table .table-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 100%;
 }
@@ -806,11 +820,16 @@ svg:hover {
 }
 
 .table .table-item {
-  justify-content: space-around;
-  flex-grow: 0;
-  flex-basis: 100%;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-flex: 0;
+      -ms-flex-positive: 0;
+          flex-grow: 0;
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
   width: 100%;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   border-bottom: 1px solid #E3E3E3;
   padding: 10px 5px;
   font-size: 16px;
@@ -825,13 +844,19 @@ svg:hover {
 
 @media (max-width: 767px) {
   .links .table-row {
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
   .links .table-row svg {
     display: inline-block;
   }
   .general-statistic .table-row {
-    flex-direction: row;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
   }
   .table-item {
     text-align: center;
@@ -845,9 +870,16 @@ form {
 }
 
 .form-horizontal {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .form-inline {
@@ -860,9 +892,14 @@ form {
 }
 
 .field {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: baseline;
-  flex-wrap: wrap;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   padding: 10px;
 }
 
@@ -912,7 +949,6 @@ label {
   border: solid white;
   border-width: 0 2px 2px 0;
   -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
   transform: rotate(45deg);
 }
 
@@ -1021,7 +1057,8 @@ select {
 }
 
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .overlay {
@@ -1032,14 +1069,20 @@ select {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   overflow: auto;
   padding: 30px;
   display: none;
 }
 
 .overlay.show {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -1060,6 +1103,13 @@ select {
   display: block;
 }
 
+.modal .btn-close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 5px 10px;
+}
+
 .navbar {
   position: fixed;
   top: 0;
@@ -1068,6 +1118,7 @@ select {
   background-color: #191919;
   height: 100vh;
   float: left;
+  -webkit-transition: all .3s ease-in-out;
   transition: all .3s ease-in-out;
 }
 
@@ -1098,9 +1149,17 @@ select {
 
 .navbar .team-manager {
   border-top: 1px solid #bababa;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: flex-start;
-  flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-left: 15px;
 }
 
 .navbar .team-manager h2 {
@@ -1114,6 +1173,8 @@ select {
 }
 
 .navbar .team-manager .manager {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   font-size: 14px;
   color: #56819F;
@@ -1128,8 +1189,12 @@ select {
 }
 
 .navbar .team-manager .manager p {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin-left: 10px;
 }
 
@@ -1151,7 +1216,7 @@ select {
   }
   .navbar.hide .navbar-menu i {
     position: absolute;
-    top: 5px;
+    top: 0px;
     left: 200px;
   }
   .navbar h3 {
@@ -1161,8 +1226,12 @@ select {
     display: none;
   }
   .navbar .manager {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 }
 
@@ -1193,9 +1262,15 @@ select {
     display: none;
   }
   .topbar_mobile {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   .topbar_mobile .icon {
     display: inline;
@@ -1212,7 +1287,8 @@ select {
 .general-statistic {
   border: 1px solid #E3E3E3;
   background-color: #ffffff;
-  box-shadow: 2px 2px 2px #979797;
+  -webkit-box-shadow: 2px 2px 2px #979797;
+          box-shadow: 2px 2px 2px #979797;
   margin: 50px 5px;
   padding: 15px;
 }
@@ -1228,6 +1304,10 @@ select {
   padding: 10px 30px 10px 10px;
   margin: -3px;
   font-family: "Open Sans", Helvetica, Arial;
+}
+
+.calendar .btn svg:hover {
+  fill: #ffffff;
 }
 
 .graph-chart {
@@ -1263,7 +1343,8 @@ select {
 .links {
   border: 1px solid #E3E3E3;
   background-color: #ffffff;
-  box-shadow: 2px 2px 2px #979797;
+  -webkit-box-shadow: 2px 2px 2px #979797;
+          box-shadow: 2px 2px 2px #979797;
   margin: 50px 5px;
   padding: 15px;
 }
@@ -1329,5 +1410,4 @@ a:hover {
     text-align: center;
   }
 }
-
 /*# sourceMappingURL=style.css.map */
