--- a/sass/sections/_general_statistic.scss
+++ b/sass/sections/_general_statistic.scss
@@ -12,6 +12,16 @@
         padding: 10px 30px 10px 10px;
         margin: -3px;
         font-family: $paragraph-font;
+
+
+    }
+
+    .btn {
+        svg {
+            &:hover {
+                fill: #ffffff;
+            }
+        }
     }
 }
 
