--- a/css/style.prefixed.css
+++ b/css/style.prefixed.css
@@ -1093,11 +1093,7 @@ select {
   background-color: #191919;
   height: 100vh;
   float: left;
-  transition: all .3s ease-in-out;
-}
-
-.navbar.hide {
-  left: -150px;
+  transition: all .2s ease-in-out;
 }
 
 .navbar h3 {
@@ -1175,7 +1171,7 @@ select {
   .navbar .navbar-menu i {
     position: absolute;
     top: 10px;
-    left: 550px;
+    right: -600px;
   }
   .navbar.hide {
     left: 0px;
@@ -1184,7 +1180,8 @@ select {
   .navbar.hide .navbar-menu i {
     position: absolute;
     top: 0px;
-    left: 200px;
+    right: 10px;
+    z-index: 2;
   }
   .navbar h3 {
     display: none;
