--- a/css/style.prefixed.css
+++ b/css/style.prefixed.css
@@ -1085,6 +1085,11 @@ select {
   padding: 5px 10px;
 }
 
+.modal-title {
+  color: #979797;
+  font-size: 16px;
+}
+
 .navbar {
   position: fixed;
   top: 0;
