--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -6,7 +6,7 @@
     font-weight: 300;
     border: none;
     cursor: pointer;
-    margin-top: 15px;
+    margin: 15px 10px 0px 10px;
 }
 
 .btn-primary {
