--- a/sass/style.scss
+++ b/sass/style.scss
@@ -40,6 +40,7 @@ a {
         line-height: 42px;
         font-size: $small-font-size;
         font-weight: bold;
+        text-align: left;
     }
 }
 
