--- a/css/style.css
+++ b/css/style.css
@@ -686,7 +686,7 @@ template {
   font-weight: 300;
   border: none;
   cursor: pointer;
-  margin-top: 15px;
+  margin: 15px 10px 0px 10px;
 }
 
 .btn-primary {
@@ -904,7 +904,7 @@ form {
 }
 
 .range {
-  height: 234px;
+  height: 230px;
 }
 
 label {
@@ -915,13 +915,15 @@ label {
   width: 130px;
   margin-right: 10px;
   padding-bottom: 10px;
+  text-align: left;
 }
 
 .container_checkbox {
   display: block;
   position: relative;
-  padding-left: 35px;
+  padding-left: 30px;
   cursor: pointer;
+  text-align: left;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -980,7 +982,7 @@ input[type="text"]:focus,
 [type="password"]:focus,
 [type="email"]:focus {
   outline: none;
-  border: 2px solid #F58220;
+  border: 1px solid #F58220;
 }
 
 input[type="range"] {
@@ -1091,7 +1093,7 @@ select {
 }
 
 .modal {
-  max-width: 600px;
+  max-width: 800px;
   margin: auto;
   background-color: #ffffff;
   position: relative;
@@ -1385,6 +1387,7 @@ a:hover {
   line-height: 42px;
   font-size: 14px;
   font-weight: bold;
+  text-align: left;
 }
 
 .scroll-wrapper {
