--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -4,19 +4,17 @@
     box-sizing: border-box;
 }
 
-.container {
-    width: 100%;
-    max-width: 1170px;
-    margin: 0 auto;
-    padding-left: 15px;
-    padding-right: 15px;
-}
-
 .container-fluid {
     width: 100%;
     padding-left: 15px;
     padding-right: 15px;
     text-align: center;
+}
+
+.container {
+    @extend .container-fluid;
+    max-width: 1170px;
+    margin: 0 auto;
 }
 
 .row::before,
